--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">RxjavaDemo</string>
-    <string name="search_hint">输入搜索的音乐</string>
+    <string name="app_name">Soul</string>
 </resources>
